# data-analyst-agent

./: .gitignore  README.md  pyproject.toml  requirements-train.txt  requirements.txt
data/: sample_sales.csv
distill/: format.py  kaggle_distill.ipynb  train.py
eval/: checker.py  collect.py  dabench.py  metrics.py  run_eval.py
eval/results/: summary.md
src/data_analyst_agent/: cli.py  context.py  tracing.py
src/data_analyst_agent/agent/: loop.py  prompts.py
src/data_analyst_agent/sandbox/: executor.py
tests/: test_checker.py  test_collect.py  test_context.py  test_executor.py
